# physical-ai-textbook-rag

./: README.md
HackathonGIAIC/: .env  .gitignore  IMPLEMENTATION_SUMMARY.md
HackathonGIAIC/.claude/: settings.local.json
HackathonGIAIC/.specify/memory/: constitution.md
HackathonGIAIC/backend/: .env  .env.example  =2.7.0  README.md  agent.py  main.py  pyproject.toml  pytest.ini  railway.json  requirements.txt
HackathonGIAIC/backend/src/: config.py
HackathonGIAIC/backend/src/models/: metadata.py  response.py  search_query.py  search_result.py
HackathonGIAIC/backend/src/services/: embedding_service.py  qdrant_client.py  retrieval_service.py  validation_service.py
HackathonGIAIC/backend/src/utils/: error_handler.py  exceptions.py  json_formatter.py  validators.py
HackathonGIAIC/physical-ai/: .env  docusaurus.config.js  gitignore.txt  package-lock.json  package.json  sidebars.js
HackathonGIAIC/physical-ai/.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
HackathonGIAIC/physical-ai/docs/: index.md
HackathonGIAIC/specs/003-retrieval-testing/: data-model.md  plan.md  quickstart.md  spec.md
HackathonGIAIC/specs/004-rag-agent/: plan.md  spec.md  tasks.md
HackathonGIAIC/specs/005-rag-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
HackathonGIAIC/specs/1-physical-ai-book/: BOOK_STRUCTURE.md  PLAN_SUMMARY.md  README.md  plan.md  spec.md  tasks.md
HackathonGIAIC/specs/2-embedding-pipeline/: data-model.md  (+4 more)
HackathonGIAIC/tests/: test_main.py
(+69 files in other folders)
